tests/snapshots/render/dumb@commonmark-spec-321-lists.snap
---
source: tests/render.rs
assertion_line: 111
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: tests/markdown/commonmark-spec/321-lists.md
snapshot_kind: text
---
• a
  ▌ b

  ╭────────────────────────────────────────────────────────────────────────────╮
  │ c                                                                          │
  ╰────────────────────────────────────────────────────────────────────────────╯

• d
