tests/snapshots/render/dumb@samples-block_quote_and_ruler.snap
---
source: tests/render.rs
assertion_line: 111
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: tests/markdown/samples/block_quote_and_ruler.md
snapshot_kind: text
---
Block quote without paragraphs:

▌ Lorem ipsum dolor sit amet.

Block quotes with paragraphs

▌ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
▌ eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
▌ voluptua.

▌ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
▌ eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
▌ voluptua.

Before we continue, have a ruler:

════════════════════════════════════════════════════════════════════════════════

Bye bye
