tests/snapshots/render/dumb@samples-headers_and_paragraphs.snap
---
source: tests/render.rs
assertion_line: 111
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: tests/markdown/samples/headers_and_paragraphs.md
snapshot_kind: text
---
The heading
════════════════════════════════════════════════════════════════════════════════

Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.

A sub-heading
────────────────────────────────────────────────────────────────────────────────

Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.

Another heading with inline formatting
────────────────────────────────────────────────────────────────────────────────

Bye Bye
