tests/snapshots/render/dumb@samples-tables.snap
---
source: tests/render.rs
assertion_line: 111
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: tests/markdown/samples/tables.md
snapshot_kind: text
---
Normal table:

┌──────────────┬──────────┬───────────────┬──────────────┐
│ left aligned │ centered │ right aligned │ no alignment │
├──────────────┼──────────┼───────────────┼──────────────┤
│ cell         │   cell   │          cell │ cell         │
│ cell         │   cell   │          cell │ cell         │
│ cell         │   cell   │          cell │ cell         │
└──────────────┴──────────┴───────────────┴──────────────┘

Table without body:

┌──────┐
│ head │
├──────┤
└──────┘

Table with empty cells:

┌───┬───┐
│ a │ b │
├───┼───┤
│   │   │
└───┴───┘

Inline markups in table:

┌───────┐
│ head  │
├───────┤
│ a b c │
└───────┘
